# gnca

./: Cargo.toml  README.md  ROADMAP.md
src/: imageutils.rs  lib.rs  main.rs  metrics.rs  model.rs  ui.rs
src/model/: data.rs  original_model.rs  train.rs
