[package]
name = "gnca"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "~0.16", features = ["train", "wgpu", "vision"] }
# TODO: Remove these dependency versions when the bug is fixed
# https://github.com/tracel-ai/burn/issues/2876
bincode = "=2.0.0-rc.3"
bincode_derive = "=2.0.0-rc.3"

image = "0.25.6"
serde = "1.0.219"
ureq = "3.0.10"
anyhow = "1.0.97"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
