[package]
name = "gnca"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.16.1", features = ["train", "wgpu", "vision"] }

image = "0.25.6"
serde = "1.0.219"
ureq = "3.0.10"
anyhow = "1.0.97"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
burn-ndarray = "0.16.1"
rand = "0.9.0"
